--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-hover-video-player": "^9.4.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "reactdom": "^2.0.0",
